PrintPreview: Pass policies in "setupPrinter" message.

Bug: 882896
Change-Id: I21cc0d2fcbfaa7d9f112008fb2612ce6d50f8a8a
Reviewed-on: https://chromium-review.googlesource.com/1219448
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Commit-Queue: Vladislav Kuzkokov <vkuzkokov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590966}