chrome/browser/ui/webui/print_preview/print_preview_handler.cc
@@ -63,6 +63,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/prefs/pref_service.h"
 #include "components/printing/common/cloud_print_cdd_conversion.h"
 #include "components/printing/common/print_messages.h"
+#include "components/printing/common/printer_capabilities.h"
 #include "components/signin/core/browser/gaia_cookie_manager_service.h"
 #include "components/signin/core/browser/profile_management_switches.h"
 #include "components/signin/core/browser/profile_oauth2_token_service.h"
@@ -1149,6 +1150,14 @@ void PrintPreviewHandler::SendPrinterSetup(
       destination_info->Remove(printing::kSettingCapabilities, &caps_value) &&
       caps_value->is_dict()) {
     caps = base::DictionaryValue::From(std::move(caps_value));
+    base::Value* printer = destination_info->FindKeyOfType(
+        printing::kPrinter, base::Value::Type::DICTIONARY);
+    if (printer) {
+      base::Value* policies_value = printer->FindKeyOfType(
+          printing::kSettingPolicies, base::Value::Type::DICTIONARY);
+      if (policies_value)
+        response->SetKey("policies", std::move(*policies_value));
+    }
   } else {
     LOG(WARNING) << "Printer setup failed";
     success = false;
