chrome/browser/resources/print_preview/new/destination_dialog.js
@@ -297,6 +297,8 @@ Polymer({
               listItem.onConfigureComplete(response.success);
               if (response.success) {
                 destination.capabilities = response.capabilities;
+                if (response.policies)
+                  destination.policies = response.policies;
                 this.selectDestination_(destination);
               }
             },
